add <3.12 for requires-python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "particula"
 description = "a simple, fast, and powerful particle simulator"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.12"
 license = {file = "LICENSE"}
 authors = [
     {name = "aktwo", email="aktwo@users.noreply.github.com"},
