--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -28,6 +28,7 @@ parts:
     sections:
     - file: examples/lagrangian/basic_lagrangian_box
     - file: examples/lagrangian/sweep_and_prune
+    - file: examples/lagrangian/real_aerosols
   - file: examples/equilibria/equilibria_intro
     sections:
     - file: examples/equilibria/activity_part1
