--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with: 
+        persist-credentials: false
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v5.0.0
