--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -38,6 +38,7 @@ parts:
   - file: examples/light_scattering/aerosol_optics_intro
     sections:
     - file: examples/light_scattering/mie_basics
+    - file: examples/light_scattering/humid_scattering
 - caption: Documentation
   numbered: false
   chapters:
