--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -59,6 +59,7 @@ parts:
     - file: documentation/utilities/slip_correction
     - file: documentation/utilities/friction_factor
     - file: documentation/utilities/dimensionless_coagulation
+    - file: documentation/utilities/convert_size_dist_scales
 - caption: Strategic Plan
   numbered: false
   chapters:
