--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -72,6 +72,7 @@ parts:
   chapters:
   - file: documentation/next/next_overview
   - file: documentation/next/next_vapor_pressure
+  - file: documentation/next/next_gas_species
   - file: documentation/next/next_gas
   - file: documentation/next/next_particle
   - file: documentation/next/next_aerosol
