--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -67,14 +67,10 @@ parts:
   chapters:
   - file: strategic_plan/strategic_planning_FY24
   - file: strategic_plan/Aerosol_patterns
-- caption: Prototype
+- caption: Next Development
   numbered: false
   chapters:
-  - file: documentation/base/base_overview
-  - file: documentation/base/gas
-  - file: documentation/base/base_particle
-  - file: documentation/base/base_aerosol
-  - file: documentation/base/base_runnable_process
+  - file: documentation/next/next_vapor_pressure
 - caption: Community
   numbered: false
   chapters:
