Documentation of code autobuild (#5)
* added mkdocs
Fixes Gorkowski/particula#3

* adding pydoc markdown gen

* tried handdown build an CI int

* errors

* generator python build

* just mkdocs build

* gh deploy

* update build

* mkdocs with books

* changed doc list

* removed book config

* some folder reorg and jupyter docs

* update git

* removed source folder

* update mk build

* change colors and local git mk folder

* remove builder and fixed lint

* some re-org and skip mk gen file pytype

* reorg files

* removed extra line

* added notebooks back

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore .DS_Store on macs
 .DS_Store
 
+# ignore local mkdocs source folder
+*Source-Code*
+.cache/
 # ignore local .vscode folder
 .vscode/
 
