--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ theme:
     - navigation.sections
     - navigation.tracking
     - navigation.top
-    - navigation.footer
+    # - navigation.footer
     - toc.integrate
     - header.autohide
     - search.suggest
@@ -87,11 +87,10 @@ markdown_extensions:
 
 plugins:
   - search
-  # - social
   - mkdocs-jupyter:
-      include_source: True
-      execute: False  # takes too long, should build separately
-      allow_errors: True
+      include_source: True  # This enables the download of notebook sources.
+      execute: False        # Avoid executing notebooks during the build.
+      allow_errors: True    # Allow errors in the notebooks.
 
 extra_css:
   - stylesheets/extra.css
