--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,11 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
 plugins:
   - search
   - mkdocs-jupyter:
@@ -98,6 +103,7 @@ plugins:
 
 extra_css:
   - stylesheets/extra.css
+
 
 copyright: |
   &copy; 2024 By particula contributors
