fixed docs link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Particula
-repo_url: https://github.com/gorkowski/particula
+repo_url: https://github.com/uncscode/particula
 repo_name: development-fork
 edit_uri: edit/main/docs/_builds
 
