--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "particula"
 description = "a simple, fast, and powerful particle simulator"
 readme = "README.md"
-requires-python = ">=3.9,<3.12"
+requires-python = ">=3.9"
 license = {file = "LICENSE"}
 authors = [
     {name = "aktwo", email="aktwo@users.noreply.github.com"},
@@ -22,7 +22,7 @@ keywords = [
 ]
 
 dependencies = [
-    "numpy", "scipy==1.12.0", "pint", "hypersolver==0.0.8", "pandas",
+    "numpy", "scipy<1.14.0", "pint", "hypersolver==0.0.8", "pandas",
     "netCDF4", "shapely", "PyMieScatt", "tqdm", "pytz",
     "matplotlib", "torch", "scikit-learn"
 ]
