--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -31,7 +31,7 @@ jobs:
             pip install mkdocs mkdocs-material handsdown mkdocs-jupyter
 
         - name: Generate Source Code Documentation with Handsdown
-          run: python docs/mk_generator.py
+          run: python docs/assets/mk_generator.py
 
         - name: Build MkDocs site and Run Jupyter Books
           run: mkdocs build
