--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,12 +31,11 @@ jobs:
         python -m pip install pytest ${{ matrix.linter }}
         python -m pip install .
 
-    - 
-      if: ${{ matrix.linter == 'flake8' }}
-      name: Lint with flake8
-      run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --max-complexity=10 --max-line-length=127 --statistics 
+      - 
+        if: ${{ matrix.linter == 'flake8' }}
+        name: Lint with flake8
+        run: |
+          flake8 . --config .github/.flake8
 
     - 
       if: ${{ matrix.linter == 'pylint' }} 
