--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,4 +41,4 @@ jobs:
       if: ${{ matrix.linter == 'pylint' }}
       name: Lint with pylint
       run: |
-        pylint $(find particula/ -name "*.py" ! -name "*_test.py" | xargs)
+        pylint $(find particula/ -name "*.py" | xargs)
