--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 
 # ignore local mkdocs source folder
 *Source-Code*
-*API*
+docs/.assets/single_page_reference*
+docs/API*
 .cache/
 # ignore local .vscode folder
 .vscode/
