--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ keywords = [
 ]
 
 dependencies = [
-    "numpy", "scipy",
+    "numpy>=2.0.0", "scipy>=1.12",
 ]
 
 # This is set automatically by flit using `particula.__version__`
