--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ edit_uri: edit/main/docs/_builds
 
 theme:
   name: material
+  logo: images/icon_light_clear.svg
   features:
     - navigation.tabs
     - navigation.tabs.sticky
@@ -23,9 +24,9 @@ theme:
     - content.code.annotation
     - content.code.copy
   language: en
-  icon:
-    repo: fontawesome/brands/github
-    logo: material/border-none-variant
+  # icon:
+  #   repo: fontawesome/brands/github
+  #   logo: material/border-none-variant
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
@@ -99,10 +100,11 @@ extra_javascript:
 
 plugins:
   - search
-  - mkdocs-jupyter:
-      include_source: True  # This enables the download of notebook sources.
-      execute: False        # Avoid executing notebooks during the build.
-      allow_errors: True    # Allow errors in the notebooks.
+  - social
+  # - mkdocs-jupyter:
+  #     include_source: True  # This enables the download of notebook sources.
+  #     execute: False        # Avoid executing notebooks during the build.
+  #     allow_errors: True    # Allow errors in the notebooks.
 
 extra_css:
   - stylesheets/extra.css
