--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -33,7 +33,7 @@ jobs:
         - name: Install dependencies
           run: |
             pip install jupyter-book ghp-import
-            pip install mkdocs mkdocs-material handsdown mkdocs-jupyter
+            pip install mkdocs mkdocs-material[imaging] handsdown mkdocs-jupyter
             pip install nbconvert
 
         - name: Generate Source Code Documentation with Handsdown
