--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   name: material
   custom_dir: docs/overrides
   logo: images/icon_light_clear.svg
+  favicon: images/icon_dark.svg
   features:
     - navigation.tabs
     - navigation.tabs.sticky
@@ -25,16 +26,16 @@ theme:
     - content.code.annotation
     - content.code.copy
   language: en
-  # icon:
-  #   repo: fontawesome/brands/github
-  #   logo: material/border-none-variant
+  icon:
+    # repo: fontawesome/brands/github
+    logo: images/icon_light_clear.svg
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
       toggle:
         icon: material/brightness-auto
         name: Switch to light mode
-      primary: blue
+      primary: teal
       accent: cyan
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
@@ -103,11 +104,11 @@ extra_javascript:
 
 plugins:
   - search
-  - social
-  - mkdocs-jupyter:
-      include_source: True  # This enables the download of notebook sources.
-      execute: False        # Avoid executing notebooks during the build.
-      allow_errors: True    # Allow errors in the notebooks.
+  # - social
+  # - mkdocs-jupyter:
+  #     include_source: True  # This enables the download of notebook sources.
+  #     execute: False        # Avoid executing notebooks during the build.
+  #     allow_errors: True    # Allow errors in the notebooks.
 
 extra_css:
   - stylesheets/extra.css
