--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,11 +104,11 @@ extra_javascript:
 
 plugins:
   - search
-  # - social
-  # - mkdocs-jupyter:
-  #     include_source: True  # This enables the download of notebook sources.
-  #     execute: False        # Avoid executing notebooks during the build.
-  #     allow_errors: True    # Allow errors in the notebooks.
+  - social
+  - mkdocs-jupyter:
+      include_source: True  # This enables the download of notebook sources.
+      execute: False        # Avoid executing notebooks during the build.
+      allow_errors: True    # Allow errors in the notebooks.
 
 extra_css:
   - stylesheets/extra.css
