fix site warning in mkbuild

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Particula
+site_url: https://uncscode.github.io/particula
 repo_url: https://github.com/uncscode/particula
 repo_name: particula
 edit_uri: edit/main/docs/_builds
