--- a/.github/workflows/AIdocs.yml
+++ b/.github/workflows/AIdocs.yml
@@ -14,7 +14,7 @@ jobs:
   blds:
     runs-on: ubuntu-latest
     concurrency:
-      group: "pages"
+      group: "aidocs"
       cancel-in-progress: true
     steps:
         - name: Check out code
