--- a/.github/workflows/AIdocs.yml
+++ b/.github/workflows/AIdocs.yml
@@ -21,7 +21,7 @@ jobs:
           uses: actions/checkout@v4
           with: 
             persist-credentials: false
-            fetch-depth: 250 # Fetch all history for all branches and tags to get the latest commit hash
+            fetch-depth: 250 # Fetch recent commits history, used to find changed files
 
         - name: Set up Python 3.12
           uses: actions/setup-python@v5.4.0
