--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,7 @@ extra_javascript:
 
 plugins:
   - search
-  # - social
+  - social
   - mkdocs-jupyter:
       include_source: True  # This enables the download of notebook sources.
       execute: False        # Avoid executing notebooks during the build.
