update instructions and limit AIdocs workflow to main repo

--- a/.github/workflows/AIdocs.yml
+++ b/.github/workflows/AIdocs.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   blds:
+    if: ${{ github.repository == 'uncscode/particula' }}
     runs-on: ubuntu-latest
     concurrency:
       group: "aidocs"
