--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -55,4 +55,5 @@ jobs:
             source-dir: site  # Assuming mkdocs build output is the default 'site' directory
             deploy-repository: uncscode/public-pr-preview
             preview-branch: particula-preview
+            # secret
             token: ${{ secrets.PUBLIC_PR_PREVIEW }}
