--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -50,9 +50,11 @@ jobs:
 
                   
         - name: Debug Token
+          env:
+            TOKEN: ${{ secrets.PUBLIC_PR_PREVIEW }}
           run: |
             echo "Token is: ${{ secrets.PUBLIC_PR_PREVIEW }}" | sed -e "s|$TOKEN|[REDACTED]|"
-      
+
         - name: Preview Documentation (on PR)
           if: ${{ github.event_name == 'pull_request' }}
           uses: rossjrw/pr-preview-action@v1
