--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  pull_request_target:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -20,8 +23,17 @@ jobs:
       cancel-in-progress: true
     steps:
         - name: Check out code
+          if: github.event_name != 'pull_request_target'
           uses: actions/checkout@v4
-          with: 
+          with:
+            persist-credentials: false
+
+        - name: Check out PR code (pull_request_target)
+          if: github.event_name == 'pull_request_target'
+          uses: actions/checkout@v4
+          with:
+            repository: ${{ github.event.pull_request.head.repo.full_name }}
+            ref: ${{ github.event.pull_request.head.ref }}
             persist-credentials: false
 
         - name: Set up Python 3.12
@@ -49,13 +61,13 @@ jobs:
             folder: site  # Assuming mkdocs build output is the default 'site' directory
 
         - name: Preview Documentation (on PR)
-          if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' }}
+          if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' }}
           uses: rossjrw/pr-preview-action@v1
           with:
             source-dir: site  # Assuming mkdocs build output is the default 'site' directory
 
         - name: Preview Documentation from fork
-          if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository && github.actor != 'dependabot[bot]' }}
+          if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && github.event.pull_request.head.repo.full_name != github.repository && github.actor != 'dependabot[bot]' }}
           uses: JamesIves/github-pages-deploy-action@v4
           with:
             token: ${{ secrets.PUBLIC_PR_PREVIEW }}
