--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -67,7 +67,7 @@ jobs:
             source-dir: site  # Assuming mkdocs build output is the default 'site' directory
 
         - name: Preview Documentation from fork
-          if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && github.event.pull_request.head.repo.full_name != github.repository && github.actor != 'dependabot[bot]' }}
+          if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && github.event.pull_request.head.repo.full_name != github.repository && github.actor != 'dependabot[bot]' && secrets.PUBLIC_PR_PREVIEW != '' }}
           uses: JamesIves/github-pages-deploy-action@v4
           with:
             token: ${{ secrets.PUBLIC_PR_PREVIEW }}
