--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dev = [
     "pylint", "pytest", "autopep8", "jupyterlab",
     "typing", "build", "flake8", "jupyter-book", "ghp-import",
     "mkdocs-material", "handsdown", "mkdocs-jupyter", "openai",
-    "GitPython",
+    "GitPython", "ruff",
 ]
 extra = [
     "matplotlib", "pandas", "tqdm", "pint",
@@ -43,3 +43,9 @@ extra = [
 [build-system]
 requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
+
+[tool.ruff]
+line-length = 79
+
+[tool.ruff.format]
+docstring-code-line-length = 79
